[gd_scene load_steps=6 format=3 uid="uid://cnqm3l13cnhqe"]

[ext_resource type="Script" path="res://Objects/My_Stuff/Movement/objRefresherWall.gd" id="1_003vf"]
[ext_resource type="Script" path="res://Objects/My_Stuff/Movement/RefresherWallCollision.gd" id="2_injwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vc040"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrx6j"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne1jj"]
size = Vector2(8, 32)

[node name="RefresherWall" type="Node2D"]
script = ExtResource("1_003vf")

[node name="StaticCollision" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_injwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticCollision"]
shape = SubResource("RectangleShape2D_vc040")

[node name="Block" type="Polygon2D" parent="StaticCollision"]
color = Color(0.431373, 1, 1, 1)
polygon = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)

[node name="LeftRefresher" type="Node2D" parent="StaticCollision"]

[node name="Poly" type="Polygon2D" parent="StaticCollision/LeftRefresher"]
polygon = PackedVector2Array(-16, -16, -16, 16, -8, 16, -12, 0, -8, -16)

[node name="Area2D" type="Area2D" parent="StaticCollision/LeftRefresher"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticCollision/LeftRefresher/Area2D"]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_lrx6j")

[node name="RightRefresher" type="Node2D" parent="StaticCollision"]

[node name="Poly" type="Polygon2D" parent="StaticCollision/RightRefresher"]
polygon = PackedVector2Array(16, -16, 8, -16, 12, 0, 8, 16, 16, 16)

[node name="Area2D" type="Area2D" parent="StaticCollision/RightRefresher"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticCollision/RightRefresher/Area2D"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_ne1jj")

[connection signal="body_entered" from="StaticCollision/LeftRefresher/Area2D" to="." method="_on_left_area_2d_body_entered"]
[connection signal="body_exited" from="StaticCollision/LeftRefresher/Area2D" to="." method="_on_left_area_2d_body_exited"]
[connection signal="body_entered" from="StaticCollision/RightRefresher/Area2D" to="." method="_on_right_area_2d_body_entered"]
[connection signal="body_exited" from="StaticCollision/RightRefresher/Area2D" to="." method="_on_right_area_2d_body_exited"]
